# tif2lerc-cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh  test.json  test.lerc
LercTiler.xcodeproj/: project.pbxproj
LercTiler/LercTiler/: AppDelegate.mm
LercTiler/LercTiler.xcodeproj/: project.pbxproj
LercTiler/LercTiler/config/: mac_common.xcconfig
LercTiler/LercTilerCmd/: main.cc  main.mm
LercTiler/core/: file_utils.cc  lerc_util.cc  lerc_util.h  logger.cc  macros.h
LercTilerJSONCodec/: AppDelegate.h  AppDelegate.mm  Info.plist  main.m
LercTilerJSONCodec/Base.lproj/: MainMenu.xib
config/: mac_debug.xcconfig
core/: file_utils.h  lerc_util.cc  lerc_util.h  logger.cc  logger.h  macros.h
data/: test_bytes.json  test_bytes.tiff
lerc/: LercDecode.js  index.html
proj.cmd/: main.cc
